--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -26,7 +26,7 @@
     height: 80px;
 }
 
-.banner__fadeButtom{
+.banner__fadeBottom{
     height: 7.4rem;
     background-image: linear-gradient(
         180deg, 
