--- a/src/Pages/Login/LoginScreen.css
+++ b/src/Pages/Login/LoginScreen.css
@@ -1,12 +1,79 @@
 .loginScreen{
-    position: relative;
+    /* position: relative; */
     height: 100%;
+    background: url("https://assets.nflxext.com/ffe/siteui/vlv3/935156fb-9579-4fc2-ad94-70680402b8ef/3689d1b9-def2-446b-bc6c-ba159a4469f8/IN-en-20230109-popsignuptwoweeks-perspective_alpha_website_large.jpg") center no-repeat;
+    background-size: cover;
+    overflow:  hidden;
+    /* display: flex; */
 }
 
 .loginScreen__logo{
+    /* This is sorted */
     position: fixed;
     left: 0;
     width: 150px;
     object-fit: contain;
     padding-left: 20px;
+    top: 20px;
+}
+
+.loginScreen__background{
+    align-items: center;
+    overflow: hidden;
+}
+
+.loginScreen__button{
+    /* This is sorted */
+    position: fixed; 
+    right: 20px;
+    top: 20px;
+    padding: 10px 20px;
+    color: #fff; 
+    background-color: #e50914;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+}
+
+.loginScreen__gradient{
+    width: 100%;
+    z-index: 1; 
+    align-items: center;
+    height: 100vh;
+    background: rgba(0, 0,0 , 0.4);
+    background-image: linear-gradient(
+        to top, 
+        rgba(0, 0, 0, 0.8) 0, 
+        rgba(0, 0, 0, 0) 60%, 
+        rgba(0, 0, 0, 0.8) 100%
+    );
+}
+
+.loginScreen__body{
+    position: absolute;
+    top: 30%;
+    z-index: 1; 
+    color: #fff;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    /* text-align: center; */
+    
+    overflow: hidden;
+}
+
+.loginScreen__body>h1{
+    font-size: 3.125rem;
+    margin-bottom: 20px;
+
+}
+
+.loginScreen__input> form> input{
+    padding: 10px;
+    outline-width: 0;
+    height: 30px;
+    width: 30%;
+    border: none;
+    max-width: 600px;
+
 }
